header and pictures, width 30%

--- a/css-display-layout/index.html
+++ b/css-display-layout/index.html
@@ -1,9 +1,14 @@
-<html><head></head><body>
-<img src="https://unsplash.it/200/300/?random">
-<img src="https://unsplash.it/200/300/?random">
-<img src="https://unsplash.it/200/300/?random">
-<img src="https://unsplash.it/200/300/?random">
-<img src="https://unsplash.it/200/300/?random">
-<img src-"https:="" unsplash.it="" 200="" 300="" ?random"="">
+<html style="box-sizing: border-box;display: inline-block;">
+<head> <link rel="stylesheet" type="text/css" href="inspector-stylesheet.css">
+</head>
+<body>
+  <header> Bitmaker Photo Gallery </header>
+<img src="https://unsplash.it/200/300/?random=3">
+<img src="https://unsplash.it/200/300/?random=9">
+<img src="https://unsplash.it/200/300/?random=700">
+<img src="https://unsplash.it/200/300/?random=22">
+<img src="https://unsplash.it/200/300/?random=99">
+<img src="https://unsplash.it/200/300/?random=77">
+
 
 </body></html>
