--- a/css-display-layout/index.html
+++ b/css-display-layout/index.html
@@ -3,8 +3,8 @@
 </head>
 <body>
   <header> Bitmaker Photo Gallery </header>
-  <h1><span>Home </span> <span> Add a photo</span>
-  <span> About </span> </h1>
+  <h1> <span>Home</span> <span> Add a photo</span>
+    <span> About </span> </h1>
 <img src="https://unsplash.it/200/300/?random=3">
 <img src="https://unsplash.it/200/300/?random=9">
 <img src="https://unsplash.it/200/300/?random=700">
@@ -13,4 +13,5 @@
 <img src="https://unsplash.it/200/300/?random=77">
 
 
-</body></html>
+</body>
+</html>
