created new div to try and make h1 and h2 same length

--- a/css-display-layout/index.html
+++ b/css-display-layout/index.html
@@ -3,14 +3,21 @@
 </head>
 <body>
   <header> Bitmaker Photo Gallery </header>
-  <h1> <span>Home</span> <span> Add a photo</span>
-    <span> About </span> </h1>
+  <h1> <span class="grey">Home</span > <span class="grey"> Add a photo</span>
+    <span class="grey"> About </span> </h1>
+<div class="photos">
+  <h2> There are <span>6<span/> photos </h2>
+    <div class="align">
+
 <img src="https://unsplash.it/200/300/?random=3">
 <img src="https://unsplash.it/200/300/?random=9">
 <img src="https://unsplash.it/200/300/?random=700">
+    </div class="align">
 <img src="https://unsplash.it/200/300/?random=22">
 <img src="https://unsplash.it/200/300/?random=99">
 <img src="https://unsplash.it/200/300/?random=77">
+
+</div class="photos>"
 
 
 </body>
